<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_now"
        android:title="@string/title_now" />

    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_feed"
        android:title="@string/title_feeds" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_statistic"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>