<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statistic_fragment_root">

    <data>

        <variable
            name="vm"
            type="com.skyfolk.quantoflife.ui.statistic.StatisticViewModel" />
...
